<resources>
    <string name="app_name">洗马</string>
    <string name="font_use">使用说明：\n请把字体文件放到 enreader/fonts/文件夹下</string>
    <string name="font_example"> ABCDEFG abcdefg 0123456789</string>

    <!--网络请求异常情况-->
    <string name="error_network">网络异常</string>
    <string name="error_server">服务器出了点小问题，正在修复，请稍后重试</string>
    <string name="error_system">系统异常</string>
    <string name="error_data_format">数据解析异常</string>
    <string name="error_unknown">未知错误</string>

    <string name="android">android</string>

    <string name="copy">复制</string>
    <string name="select_all">全选</string>

    <string name="front_merge">往前合并</string>
    <string name="insert">插入</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>

    <string name="title">标题</string>
    <string name="quote">引用</string>
    <string name="main_body">正文</string>

    <string name="cancel">取消</string>
    <string name="save">保存</string>

    <string name="page_edit_tips">内容不能为空</string>

    <string name="youdao">有道</string>
    <string name="question">提问</string>
    <string name="comment">评论</string>
    <string name="close">关闭</string>
    <string name="mine">我的</string>

    <string name="slogan">洗马：陪你精读外文好书</string>
    <string name="bottom_tips">版本 %1$s 用户 %2$s</string>
    <string name="translate_title">译 文</string>

    <string name="copy_done">已复制</string>

    <string name="font_style">字体</string>
    <string name="font_size">字号</string>
    <string name="font_color">字色</string>
    <string name="read_bg">背景</string>

    <string name="change_font">更换</string>

</resources>
