<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_read"
    android:minHeight="300dp">

    <!--<TextView
        android:id="@+id/content_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bg_read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <com.arun.ebook.widget.JustifyTextView
        android:id="@+id/contentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="115dp"
        android:lineSpacingExtra="2dp"
        android:text=""
        android:lineSpacingMultiplier="1"
        android:textColor="@color/charcoalgrey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingBottom="35dp"
        android:text="ddddddddddd"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/front_merge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:paddingBottom="10dp"
        android:text="@string/front_merge"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/front_merge"
        android:paddingBottom="10dp"
        android:text="@string/insert"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/insert"
        android:paddingBottom="10dp"
        android:text="@string/delete"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/delete"
        android:paddingBottom="10dp"
        android:text="@string/edit"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/style_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/edit"
        android:paddingBottom="10dp"
        android:text="@string/title"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/style_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/style_title"
        android:paddingBottom="10dp"
        android:text="@string/quote"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/style_main_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/style_quote"
        android:paddingBottom="10dp"
        android:text="@string/main_body"
        android:textColor="@color/darkgrey"
        android:textSize="15sp" />

</RelativeLayout>