<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/font_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="28dp"
        android:text="@string/font_style"
        android:textColor="@color/read_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/font_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="Skia"
        android:textColor="@color/read_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/font_text"
        app:layout_constraintRight_toLeftOf="@+id/change_font"
        app:layout_constraintTop_toTopOf="@+id/font_text" />

    <TextView
        android:id="@+id/change_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="28dp"
        android:text="@string/change_font"
        android:textColor="@color/change_font"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/font_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/font_text" />

    <TextView
        android:id="@+id/font_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="14dp"
        android:text="@string/font_size"
        android:textColor="@color/read_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/seekChangeSize"
        app:layout_constraintTop_toBottomOf="@+id/font_text" />

    <SeekBar
        android:id="@+id/seekChangeSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="14dp"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progress="50"
        android:progressDrawable="@drawable/shape_progress_drawable"
        android:splitTrack="false"
        android:thumb="@drawable/shape_progress_thumb"
        app:layout_constraintBottom_toBottomOf="@id/font_size"
        app:layout_constraintLeft_toRightOf="@+id/font_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/font_size" />

    <TextView
        android:id="@+id/font_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="28dp"
        android:text="@string/font_color"
        android:textColor="@color/read_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/font_size" />

    <HorizontalScrollView
        android:id="@+id/text_color_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/font_color"
        app:layout_constraintLeft_toRightOf="@+id/font_color"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/font_color">

        <LinearLayout
            android:id="@+id/text_color_panel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <TextView
        android:id="@+id/read_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="28dp"
        android:text="@string/read_bg"
        android:textColor="@color/read_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/font_color" />

    <HorizontalScrollView
        android:id="@+id/bg_color_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/read_bg"
        app:layout_constraintLeft_toRightOf="@+id/read_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/read_bg">

        <LinearLayout
            android:id="@+id/bg_color_panel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>