<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/top_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/read_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_line" />

    <ImageView
        android:id="@+id/img_voice"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginLeft="5dp"
        android:src="@mipmap/ic_voice"
        app:layout_constraintBottom_toBottomOf="@+id/text_word"
        app:layout_constraintLeft_toRightOf="@+id/text_word"
        app:layout_constraintTop_toTopOf="@+id/text_word" />

    <TextView
        android:id="@+id/translate_voice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="28dp"
        android:ellipsize="end"
        android:gravity="right"
        android:maxLines="1"
        android:text=""
        android:textColor="@color/read_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_word"
        app:layout_constraintLeft_toRightOf="@+id/img_voice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_word" />

    <TextView
        android:id="@+id/translate_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@color/read_text"
        android:textSize="14sp"
        android:paddingBottom="7dp"
        android:text=""
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/text_word"
        app:layout_constraintTop_toBottomOf="@+id/text_word" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:background="@color/darkgrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate_detail"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_youdao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@mipmap/ic_search"
        android:drawablePadding="1dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/youdao"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_question"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_question"
        android:drawablePadding="1dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/question"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/btn_youdao"
        app:layout_constraintRight_toLeftOf="@+id/btn_comment"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_comment"
        android:drawablePadding="1dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/comment"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/btn_question"
        app:layout_constraintRight_toLeftOf="@+id/btn_close"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:drawableLeft="@mipmap/ic_close"
        android:drawablePadding="1dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/close"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/btn_comment"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:visibility="gone"/>
</android.support.constraint.ConstraintLayout>